# weather-app

./: .env  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 876199804371_create_weather_table.py  8a5b83f423e1_create_weather_table.py  cf899c218f52_create_users_table.py
app/: main.py  weather.py
app/api/: weather.py
app/core/: config.py
app/db/: create_tables.py  database.py  models.py  seed_users.py
app/services/: weather_service.py
