[project]
name = "my-app"
version = "0.1.0"
description = "FastAPI project"
readme = "README.md"
required-version = "3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "python-dotenv",
    "asyncpg",
    "sqlalchemy",
    "databases",
    "pydantic-settings"
]

[tool.uv]
required-version = "3.12"

