[build-system]
requires = ["uv-build>=0.2"]
build-backend = "uv_build.backend"

[project]
name = "my-app"
version = "0.1.0"
description = "FastAPI project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "httpx",
    "python-dotenv",
    "asyncpg",
    "sqlalchemy[asyncio]",
    "databases",
    "pydantic-settings",
    "alembic>=1.16.4",
]

